# mboy-android

./: .gitmodules  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidGUI.cpp  AndroidGUI.h  CMakeLists.txt  native-lib.cpp
app/src/main/java/com/matthew/mboy/: Application.java  DelayedButtonView.java  DpadView.java  Gameboy.java  GameboyView.java  MainActivity.java  NativeException.java  PermissionHelper.java  SettingsActivity.java  SettingsHelper.java
app/src/main/res/drawable/: ic_button_a.xml  ic_button_b.xml  ic_button_dpad.xml  ic_button_start_select.xml  ic_icon.xml  ic_icon_round.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/layout-land/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/xml/: root_preferences.xml
gradle/wrapper/: gradle-wrapper.properties
